# corregir_portafolio1_isc205

./: README.md
10123226/Portafolio_1/: Problema.2.c  Problema.8.c  Problema_10.c  Problema_15.c  Problema_4.c  Problema_5.c  README.md
10131844/cgeores/: README.md
10131844/cgeores/8.14 y 8.15/: 8.14.c  8.15.c
10131844/cgeores/portafolio 1/: #2.c  #4.c  #5.c  #6.c  #7.c
10131865/Code/: README.md
10131865/ejerciciosportafolio1/: #1.docx  #2.c  README.md
10131865/ejerciciosportafolio1/#11/: #11.cbp  #11.depend  #11.layout  main.c
10131865/ejerciciosportafolio1/#15/: #15.cbp  #15.depend  #15.layout  main.c
10131865/ejerciciosportafolio1/#3/: main.c  primos.cbp  primos.depend  primos.layout
10131865/ejerciciosportafolio1/#4debugging/: #4debugging.cbp  #4debugging.depend  #4debugging.layout  main.c
10131865/ejerciciosportafolio1/#5/: #5.cbp  #5.depend  #5.layout  main.c
10131865/ejerciciosportafolio1/#6/: #6.cbp  #6.depend  main.c  (+1 more)
10134133/Portafolios1/: 10134133.md  CMakeLists.txt
10134133/Portafolios1/primo/: primo.c  primo.h  primominunit.c  primominunit.h
10134133/Portafolios1/punto 8.8/: joyanes8.c
10134133/Portafolios1/punto2/: main.c
10134133/Portafolios1/punto4/: inversadetexto.c
10134133/Portafolios1/punto6/: busquedabinaria.c
10134133/Portafolios1/punto7/: sumamatriz.c
10134133/Portafolios1/punto821/: joyanes21.c
10134133/Portafolios1/punto9/: bubblesort.c
10134712/EjerciciosFP/: 10134712.txt  Ejercicio 8.11 Joyanes
10134921/Conjunto-de-problemas-1-ISC-105/: 10134921.txt  CMakeLists.txt  Feedback10134921L.xlsx
10134921/Conjunto-de-problemas-1-ISC-105/ArgVar/: ArgVar.c  ArgVar.h  main_ArgVar.c
10134921/Conjunto-de-problemas-1-ISC-105/EJ 6 Busqueda Binaria/: Binary_Search.c  Binary_Search.h  Main_BInary.c  Minunit_Binary.c
10134921/Conjunto-de-problemas-1-ISC-105/Ejercicio 4/: Invertir_rcsv.c  Invertir_rcsv.h  Main_Inv.c
10134921/Conjunto-de-problemas-1-ISC-105/Ejercicio 8.10/: Main_trasp.c  Minunit_trasp.c  matriz_trasp.c  matriz_trasp.h
10134921/Conjunto-de-problemas-1-ISC-105/EsPrimo/: Main_Primos.c  minunit_ primos.c  primos.c  primos.h
10134921/Conjunto-de-problemas-1-ISC-105/Tema 2/: Main_matriz.c  matriz.c  matriz.h
10134921/Conjunto-de-problemas-1-ISC-105/Tema 3/: Estruct.c  Estruct.h  Main_Estruct.c
10135652/Portafolios1/: 10135652.txt  13-1-InvertirNumeros.c  13-2-ImprimirFrase.c  2.NumMax.c  3.Primo.c  4.InvFrase.c  5.InvArr.c  7.SumarArr.c  9.TimeE.c
10135655/Portafolio-1/: 10135655.txt  README.md
10135655/Portafolio-1/Ejercicio #13(Ejercicios del Libro)/: CMakeLists.txt
10135655/Portafolio-1/Ejercicio #13(Ejercicios del Libro)/Ahorcado/: 1_jugador.c  2_Jugador.c  Ahorcado.c  Funciones.h  main.c  minunit.c  minunit.h
10135655/Portafolio-1/Ejercicio #13(Ejercicios del Libro)/untitled/: Identificador_Valido.c  Identificador_Valido.h  main.c  minunit.h
10135663/I_guess/: 10135663.txt  2.c  3.c  4.c  5.c  7.c  8.5.c
10135677/Ejercicios-Jariel/: 1.c  10135677.txt  README.md
10135714/portafolio1/: 10135714.txt  CMakeLists.txt
10135714/portafolio1/punto05/: main.c  pt05.c  pt05.h
10135714/portafolio1/punto2/: main.c  punto2.c  punto2.h
10135714/portafolio1/punto3/: main.c  punto3.c  punto3.h
10135714/portafolio1/punto4/: main.c  punto4.c  punto4.h
10135720/myfirstrepo/: 10135720.txt
(+163 files in other folders)
