cmake_minimum_required(VERSION 3.14)
project(portafolio_01 C)

set(CMAKE_C_STANDARD 99)

add_executable(punto02 punto2/punto2.c punto2/punto2.h punto2/main.c)
add_executable(punto03 punto3/punto3.c punto3/punto3.h punto3/main.c)
add_executable(punto04 punto4/punto4.c punto4/punto4.h punto4/main.c)
add_executable(punto005 punto05/pt05.h punto05/pt05.c punto05/main.c)